--- a/index.html
+++ b/index.html
@@ -43,12 +43,15 @@
             <h3>Lo que dicen nuestros clientes</h3>
             <div class="slider">
                 <div class="slide active">
+                    <img src="img/Perroygato.jpg" alt="Cliente feliz con su perro">
                     <p>“El mejor lugar para consentir a mi perrito. ¡Excelente atención!”</p>
                 </div>
                 <div class="slide">
+                    <img src="img/Comida-mascotas-super-min-scaled.jpg.webp" alt="Cliente feliz con su perro">
                     <p>“Gran variedad de productos y siempre me ayudan a elegir lo mejor para mis gatos.”</p>
                 </div>
                 <div class="slide">
+                    <img src="img/63ac6a0869ac3.jpeg" alt="Cliente feliz con su perro">
                     <p>“Precios justos y calidad inmejorable. ¡Recomendadísimo!”</p>
                 </div>
             </div>
